--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CHILLMOO GUY</title>
+<title>AVA MEOWW</title>
 <link rel="icon" type="image/png" href="images/lggg-MQY6Rl0KflAdkdOARK88WHWjFligv9.png">
 <link rel="apple-touch-icon" href="images/lggg-MQY6Rl0KflAdkdOARK88WHWjFligv9.png">
-<link href="https://fonts.googleapis.com/css2?family=DynaPuff&amp;display=swap" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css2?family=DynaPuff&amp;display=swap" rel="stylesheet"> -->
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 <style>
   * {
-      font-family: 'DynaPuff', cursive;
+      /* font-family: 'DynaPuff', cursive; */
+      font-family: "Lexend", sans-serif, cursive;
       box-sizing: border-box;
       scroll-behavior: smooth;
   }
@@ -15,7 +20,7 @@
   body {
       margin: 0;
       padding: 0;
-      background-color: #C4A484;
+      background-color: #FFFF99;
       color: #594E4A;
   }
 
@@ -26,7 +31,7 @@
   }
 
   nav {
-      background-color: #c4a4849d;
+      background-color: #FFFF00;
       padding: 1rem 0;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: fixed;
@@ -571,7 +576,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: middle; margin-right: 0.5rem;">
                     <path d="m6 9 6 6 6-6"></path>
                 </svg>
-                BUY $CHILLMOO NOW!!!
+                BUY $AVAM NOW!
             </a>
         </div>
 
@@ -581,9 +586,9 @@
                     <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
                 </svg>
             </a>
-            <a href="https://dexscreener.com/solana/angf5fzbgmzjhdaeqdfhwpxa5p23q3geg7nhyxygkbmg" target="_blank" class="social-link">
+            <!-- <a href="https://dexscreener.com/solana/angf5fzbgmzjhdaeqdfhwpxa5p23q3geg7nhyxygkbmg" target="_blank" class="social-link">
                 <img src="images/dtv3sp8.png" width="24" height="24" alt="YouTube icon">
-            </a>
+            </a> -->
             <a href="https://t.me/armanidogsol" target="_blank" class="social-link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M22 2 11 13"></path>
@@ -609,14 +614,14 @@
   <div class="energy-bar"></div>
 
   <section id="story" class="section">
-      <h2 class="section-title">$CHILLMOO STORY</h2>
+      <h2 class="section-title">$AVAM STORY</h2>
       <div class="story-container">
           <div class="story-image">
               <img src="images/about.png" alt="Pim with a blue bird in the forest">
           </div>
           <div class="story-content">
-              <h3>Meet $CHILLMOO</h3>
-              <p>CHILLMOO GUY lives for luxury and commands respect wherever it goes.</p>
+              <h3>Meet $AVAM</h3>
+              <p>AVA MEOWW forever cute, irresistibly charming.</p>
               <p>POWERED BY SOLANA</p>
               <button class="button" onclick="window.open('https://t.me/armanidogsol', '_blank')">Join the Community</button>
           </div>
@@ -643,7 +648,7 @@
 
    <section id="buy" class="section how-to-buy-section">
       <div class="parallax-bg"></div>
-      <h2 class="section-title">HOW TO BUY $CHILLMOO</h2>
+      <h2 class="section-title">HOW TO BUY $AVAM</h2>
       <div class="how-to-buy">
           <ol>
               <li>
@@ -655,24 +660,24 @@
                   <p>Use your favorite exchange, like Coinbase for example, to buy SOME $SOL. Later send them to your phantom address</p>
               </li>
               <li>
-                  <h3>BUY $CHILLMOO</h3>
-                  <p>GO TO SWAP IN THE PHANTOM WALLET AND ENTER THE $CHILLMOO CONTRACT ADDRESS (CA) TO SWAP YOUR $SOL FOR $CHILLMOO</p>
+                  <h3>BUY $AVAM</h3>
+                  <p>GO TO SWAP IN THE PHANTOM WALLET AND ENTER THE $AVAM CONTRACT ADDRESS (CA) TO SWAP YOUR $SOL FOR $AVAM</p>
               </li>
           </ol>
-          <button class="button inverted" onclick="window.open('https://raydium.io/swap/?inputMint=sol&amp;outputMint=4Ka7RcmhK7MXzN17mtH68RtBr17YBZmEcWX4m7Lrpump', '_blank')">Buy $CHILLMOO Now</button>
+          <button class="button inverted" onclick="window.open('https://raydium.io/swap/?inputMint=sol&amp;outputMint=4Ka7RcmhK7MXzN17mtH68RtBr17YBZmEcWX4m7Lrpump', '_blank')">Buy $AVAM Now</button>
       </div>
   </section>
 
-  <section id="shows-up" class="section">
-      <h2 class="section-title">$CHILLMOO SHOWS UP</h2>
-      <!-- <div class="tiktok-videos">
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://x.com/chillmoo_cto/status/1860339666538627232">$CHILLMOO</a> is Live now !<br><br>ca - 4Ka7RcmhK7MXzN17mtH68RtBr17YBZmEcWX4m7Lrpump<br><br>Chart - <a href="https://t.co/O7XY9hFlGL">https://t.co/O7XY9hFlGL</a><br><br>tg - <a href="https://t.co/FjyN6J6cxa">https://t.co/FjyN6J6cxa</a><br><br>To celebrate giving away 1,000,000 <a href="https://x.com/chillmoo_cto/status/1860339666538627232">$CHILLMOO</a> to first 777 to retweet and drop wallets ! <a href="https://t.co/iGVx6rMvDf">pic.twitter.com/iGVx6rMvDf</a></p>— CHILLMOO GUY (@armanidogsol) <a href="https://twitter.com/armanidogsol/status/1860412685831049648?ref_src=twsrc%5Etfw">November 23, 2024</a></blockquote> <script async="" src="js/widgets.js" charset="utf-8"></script>
-      </div> -->
-  </section>
+  <!-- <section id="shows-up" class="section">
+      <h2 class="section-title">$AVAM SHOWS UP</h2>
+      <div class="tiktok-videos">
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">moodeng is a very chill guy <a href="https://t.co/yYNXd1xe0D">pic.twitter.com/yYNXd1xe0D</a></p>&mdash; just a chill guy (@chillguycto) <a href="https://twitter.com/chillguycto/status/1858283667228967219?ref_src=twsrc%5Etfw">November 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+  </section> -->
 </main>
 
 <footer>
-  <p>2024 $CHILLMOO</p>
+  <p>2024 $AVAM</p>
 </footer>
 
 <div id="toast" class="toast">Copied to clipboard!</div>
